--- a/elimu_yangu/leaguetable/locale/sw/LC_MESSAGES/django.po
+++ b/elimu_yangu/leaguetable/locale/sw/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2018-04-30 10:29+0300\n"
+"POT-Creation-Date: 2018-05-11 16:03+0300\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -128,3 +128,23 @@ msgstr "Mikoa"
 #: leaguetable/templates/leaguetable/profile/profile_detail.html:255
 msgid "Averege GPA"
 msgstr "Wastani wa GPA"
+
+#: leaguetable/templates/leaguetable/specific_school.html:85
+msgid "Boys School"
+msgstr "Shule ya Wavulana"
+
+#: leaguetable/templates/leaguetable/specific_school.html:88
+msgid "Mixed School"
+msgstr "Shule ya Mchanganyiko"
+
+#: leaguetable/templates/leaguetable/specific_school.html:90
+msgid "Girls School"
+msgstr "Shule ya Wasichana"
+
+#: leaguetable/templates/leaguetable/specific_school.html:93
+msgid "In"
+msgstr "wilayani"
+
+#: leaguetable/templates/leaguetable/specific_school.html:103
+msgid "SCHOOL RANKING"
+msgstr "MATOKEO YA SHULE"
